--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 <body>
   <% if user_signed_in? %>
   Logged in as <strong><%= current_user.email %></strong>.
+  <%= link_to 'Posts', posts_path, :class => 'navbar-link' %> |
   <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
   <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
   <% else %>
